feat: firebase init

--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
   </script>
 </head>
 <body>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDaJDBtCBmNhkUUPt7f0_HpIy5uI_4Klm8",
+    authDomain: "autoform-f46c9.firebaseapp.com",
+    projectId: "autoform-f46c9",
+    storageBucket: "autoform-f46c9.appspot.com",
+    messagingSenderId: "1010192257775",
+    appId: "1:1010192257775:web:df48e317a9e54e1272c11a",
+    measurementId: "G-DTDSDB57WX"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
